# MSnet

./: README.md
.github/workflows/: python-package.yaml  release.yaml
MSNetLoader/: README.md  pyproject.toml
MSNetLoader/loader/: denovo_loader.py  loader2rt.py  tensorflowloader.py  torchloader.py
MSNetLoader/msnetloader/: __init__.py  denovo_loader.py  denovo_tf.py  ms2_loader.py  ms2_tf.py  rt_loader.py  rt_tf.py
MSNetLoader/tests/: test_command.py
