[project]
name = "msnetloader"
dynamic = ["version"]
description = "A Python API for seamless integration of π-MSNet into AI workflows"
readme = "README.md"
authors = [
    { name = "chengxin dai", email = "chengxin2024@126.com" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["sdrf", "python", "multiomics", "proteomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Core dependencies for structural validation and conversions
dependencies = [
    "torch==2.6.0",
    "pandas",
    "numpy",
    "pyarrow==17.0.0",
    "tensorflow",
    "duckdb"
]

[project.urls]
Homepage = "https://github.com/daichengxin/MSnet/"
Repository = "https://github.com/daichengxin/MSnet/"


[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]

# Note: setuptools_scm configuration is in setup.py to support custom local_scheme callable
# The callable encodes branch name into version for ontology cache downloads

[dependency-groups]
dev = [
    "fastparquet",
    "flake8",
    "mypy",
    "pooch",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-datadir",
    "rdflib",
    "requests",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ontology: tests that require ontology dependencies (pooch, rdflib, requests)",
]

[tool.mypy]
packages = ["msnetloader"]

[[tool.mypy.overrides]]
module = "fastparquet"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
